style-fixed the contrast ratio of signup page

--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -84,6 +84,7 @@ label {
   background: var(--brand);
   border-radius: 3px;
   color: white;
+  cursor: pointer;
 }
 
 .login__footer {
